--- a/app/assets/stylesheets/names.css.scss
+++ b/app/assets/stylesheets/names.css.scss
@@ -49,3 +49,15 @@
       fill-opacity: .125;
       shape-rendering: crispEdges;
     }
+
+    #glmol02 {
+       float: left;
+       width: 600px;
+       height: 400px;
+       border: 2px solid;
+    }
+
+    #prop {
+        float: left;
+        width: 600px;
+    }
